@@ -19,8 +19,8 @@
 // ========================================================================
 //
 // File          : $RCSfile: apop.cc,v $
-// Revision      : $Revision: 1.7 $
-// Revision date : $Date: 2004/12/15 08:31:16 $
+// Revision      : $Revision: 1.8 $
+// Revision date : $Date: 2004/12/23 08:41:38 $
 // Author(s)     : Nicolas Rougier
 // Short         : 
 //
@@ -69,25 +69,8 @@ Apop::connect (void)
 {
 	std::string line;
 
-	// First try: try to guess password by looking at other mailboxes
-	// Remark: It's important to block thread before looking at other mailboxes
-	//         since one is maybe asking (using gui) for this password.
-	if (password_.empty()) {
-		g_static_mutex_lock (&ui_auth_mutex_);
-
-		password_ = biff_->password (this);
-
-		// Second try: ask to the user
-		if (password_.empty()) {
-			gdk_threads_enter ();
-			ui_auth_->select (this);
-			gdk_threads_leave ();
-		}
-		g_static_mutex_unlock (&ui_auth_mutex_);
-	}
-
-	// No way, user do not want to help us, we simply return
-	if (password_.empty()) {
+	// Is there a password? Can we obtain it?
+	if (!biff_->password(this)) {
 		status_ = MAILBOX_ERROR;
 		g_warning (_("[%d] Empty password"), uin_);
 		return 0;
